--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   geolocator: ^10.0.0
   weather: ^3.1.1
+  intl: ^0.18.0
+  flutter_bloc: ^8.1.6
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
